<resources>
    <string name="app_name">MelkovHw81</string>
    <string name="zero">0</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="point">.</string>
    <string name="plus_minus">&#177;</string>
    <string name="multiply">x</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="percent">%</string>
    <string name="ce">CE</string>
    <string name="C">C</string>
    <string name="backspace">&#8592;</string>
    <string name="reverse">&#8543;x</string>
    <string name="square">&#8730;</string>
    <string name="divide">&#247;</string>
    <string name="quad">x&#178;</string>
</resources>