<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="16dp"
    style="@style/Widget.AppCompat.Button.Borderless">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@android:color/darker_gray"
        android:textSize="36sp"
        android:text="@string/zero"
        android:textAlignment="textEnd"
        android:gravity="end" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_7"
                android:text="@string/seven"
                style="@style/ButtonStyle" />

            <Button
                android:id="@+id/button_8"
                android:text="@string/eight"
                style="@style/ButtonStyle" />

            <Button
                android:id="@+id/button_9"
                android:text="@string/nine"
                style="@style/ButtonStyle" />

            <Button
                android:id="@+id/button_divide"
                android:text="@string/divide"
                style="@style/ButtonStyle" />

            <Button
                android:id="@+id/button_reverse"
                style="@style/ButtonStyle"
                android:text="@string/reverse" />

            <Button
                android:id="@+id/button_backspace"
                android:text="@string/backspace"
                style="@style/ButtonStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_4"
                android:text="@string/four"
                style="@style/ButtonStyle" />

            <Button
                android:id="@+id/button_5"
                android:text="@string/five"
                style="@style/ButtonStyle" />

            <Button
                android:id="@+id/button_6"
                android:text="@string/six"
                style="@style/ButtonStyle" />

            <Button
                android:id="@+id/button_multiply"
                android:text="@string/multiply"
                style="@style/ButtonStyle"/>

            <Button
                android:id="@+id/button_quad"
                android:text="@string/quad"
                style="@style/ButtonStyle"/>

            <Button
                android:id="@+id/button_ce"
                android:text="@string/ce"
                style="@style/ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_1"
                android:text="@string/one"
                style="@style/ButtonStyle" />

            <Button
                android:id="@+id/button_2"
                android:text="@string/two"
                style="@style/ButtonStyle" />

            <Button
                android:id="@+id/button_3"
                android:text="@string/three"
                style="@style/ButtonStyle" />

            <Button
                android:id="@+id/button_minus"
                android:text="@string/minus"
                style="@style/ButtonStyle"/>

            <Button
                android:id="@+id/button_square"
                android:text="@string/square"
                style="@style/ButtonStyle" />

            <Button
                android:id="@+id/button_c"
                android:text="@string/C"
                style="@style/ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_plus_minus"
                android:text="@string/plus_minus"
                style="@style/ButtonStyle" />

            <Button
                android:id="@+id/button_0"
                android:text="@string/zero"
                style="@style/ButtonStyle" />

            <Button
                android:id="@+id/button_point"
                android:text="@string/point"
                style="@style/ButtonStyle" />

            <Button
                android:id="@+id/button_plus"
                android:text="@string/plus"
                style="@style/ButtonStyle" />

            <Button
                android:id="@+id/button_percent"
                android:text="@string/percent"
                style="@style/ButtonStyle" />

            <Button
                android:id="@+id/button_equals"
                android:text="@string/equals"
                style="@style/ButtonStyle" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>